FIX: show all tags after restricting tag list
FossilOrigin-Name: 5f07168a72d575530284de477f3b5d00a337f0e8a53d23a134afbf6a582a115e

--- a/place/constplace/listtags.mustache
+++ b/place/constplace/listtags.mustache
@@ -2,7 +2,7 @@
 <header>
 <h1>Currently used tags</h1>
 <div class="zs-meta">
-<a href="{{{#ListTagsURL}}}">All</a>{{#MinCounts}}, <a href="{{{URL}}}">{{Count}}</a>{{/MinCounts}}
+<a href="{{{ListTagsURL}}}">All</a>{{#MinCounts}}, <a href="{{{URL}}}">{{Count}}</a>{{/MinCounts}}
 </div>
 </header>
 {{#Tags}} <a href="{{{URL}}}" style="font-size:{{Size}}%">{{Name}}</a><sup>{{Count}}</sup>
