WebUI: rename "Links to this zettel" into "Additional links to this zettel"
FossilOrigin-Name: 331c8670ca73a11d9228b0e26997701750cf809d5b28a94b3d8229bd36292f5f

--- a/place/constplace/zettel.mustache
+++ b/place/constplace/zettel.mustache
@@ -17,7 +17,7 @@
 {{{Content}}}
 {{#HasBackLinks}}
 <details>
-<summary>Links to this zettel</summary>
+<summary>Additional links to this zettel</summary>
 <ul>
 {{#BackLinks}}
 <li><a href="{{{URL}}}">{{Text}}</a></li>
