Disable parsing numbers as phone numbers
FossilOrigin-Name: e53202d0e3c062de0770555d74f969ac1ee9d8a2eaaace3fbd40fc5524c66000

--- a/place/constplace/base.mustache
+++ b/place/constplace/base.mustache
@@ -5,6 +5,7 @@
 <meta name="referrer" content="no-referrer">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="generator" content="Zettelstore">
+<meta name="format-detection" content="telephone=no">
 {{{MetaHeader}}}
 <link rel="stylesheet" href="{{{StylesheetURL}}}">
 <title>{{Title}}</title>
