Fix: do not show invalid local link in WebUI info page
FossilOrigin-Name: 149f8804a132ddcb446668822a38332c6dfe2da63a095699e7f3913ccadc85c3

--- a/place/constplace/info.mustache
+++ b/place/constplace/info.mustache
@@ -17,7 +17,8 @@
 <h3>Local</h3>
 <ul>
 {{#LocLinks}}
-<li><a href="{{{.}}}">{{.}}</a></li>
+{{#Valid}}<li><a href="{{{Zid}}}">{{Zid}}</a></li>{{/Valid}}
+{{^Valid}}<li>{{Zid}}</li>{{/Valid}}
 {{/LocLinks}}
 </ul>
 {{/HasLocLinks}}
