Allow to overwrite system-defined CSS with a zettel for user-defined CSS.
FossilOrigin-Name: 1fb48b5ccc23a70bb4c8dcc092f20a5e3c3fd90cb7047b24ba1b491b2d9b8781

--- a/box/constbox/base.mustache
+++ b/box/constbox/base.mustache
@@ -7,7 +7,8 @@
 <meta name="generator" content="Zettelstore">
 <meta name="format-detection" content="telephone=no">
 {{{MetaHeader}}}
-<link rel="stylesheet" href="{{{StylesheetURL}}}">
+<link rel="stylesheet" href="{{{CSSBaseURL}}}">
+<link rel="stylesheet" href="{{{CSSUserURL}}}">
 <title>{{Title}}</title>
 </head>
 <body>
