Show shadowed boxes on zettel info page
FossilOrigin-Name: 368240ea88c52a5f371bcd650760bef2a2b929ddd8253570d8472ca99c4f87c3

--- a/box/constbox/info.mustache
+++ b/box/constbox/info.mustache
@@ -40,5 +40,9 @@
 </tr>
 {{/Matrix}}
 </table>
+{{#HasShadowLinks}}
+<h2>Shadowed Boxes</h2>
+<ul>{{#ShadowLinks}}<li>{{.}}</li>{{/ShadowLinks}}</ul>
+{{/HasShadowLinks}}
 {{#Endnotes}}{{{Endnotes}}}{{/Endnotes}}
 </article>
