FIX: show "New" menu only if there is at least one menu entry
FossilOrigin-Name: 678306b5836fe0993bf33e5cf1d10adbf9a39272cc6f640153d701149b5647f0

--- a/box/constbox/base.mustache
+++ b/box/constbox/base.mustache
@@ -40,7 +40,7 @@
 <a href="{{{ListTagsURL}}}">List Tags</a>
 </nav>
 </div>
-{{#CanCreate}}
+{{#HasNewZettelLinks}}
 <div class="zs-dropdown">
 <button>New</button>
 <nav class="zs-dropdown-content">
@@ -49,7 +49,7 @@
 {{/NewZettelLinks}}
 </nav>
 </div>
-{{/CanCreate}}
+{{/HasNewZettelLinks}}
 <form action="{{{SearchURL}}}">
 <input type="text" placeholder="Search.." name="s">
 </form>
