Refactor "format" -> "encoding"
FossilOrigin-Name: 473908824b68ee578cdfe1db6a01a10cbabf400eb42e135e9df7464a5c4f72b6

--- a/box/constbox/login.mustache
+++ b/box/constbox/login.mustache
@@ -5,7 +5,7 @@
 {{#Retry}}
 <div class="zs-indication zs-error">Wrong user name / password. Try again.</div>
 {{/Retry}}
-<form method="POST" action="?_format=html">
+<form method="POST" action="?_{{EncKey}}={{EncValue}}">
 <div>
 <label for="username">User name</label>
 <input class="zs-input" type="text" id="username" name="username" placeholder="Your user name.." autofocus>
