Remove support for superfluous encodings "json" and "raw". API zettel list only supports JSON.
FossilOrigin-Name: 66bbb4bd1076e2dad2379186360ca3edea3134de2f7bc1f357b144f10e19d154

--- a/box/constbox/info.mustache
+++ b/box/constbox/info.mustache
@@ -35,7 +35,8 @@
 <table>
 {{#Matrix}}
 <tr>
-{{#Elements}}{{#HasURL}}<td><a href="{{{URL}}}">{{Text}}</td>{{/HasURL}}{{^HasURL}}<th>{{Text}}</th>{{/HasURL}}
+<th>{{Header}}</th>
+{{#Elements}}<td><a href="{{{URL}}}">{{Text}}</td>
 {{/Elements}}
 </tr>
 {{/Matrix}}
