Code refactoring and small bug fixes
FossilOrigin-Name: 6eee79b79eed79f0799c48adde98b5ec27f8a144f6a72fc508f52f36b459ab37

--- a/box/constbox/base.mustache
+++ b/box/constbox/base.mustache
@@ -26,7 +26,7 @@
 <a href="{{{LoginURL}}}">Login</a>
 {{/UserIsValid}}
 {{#UserIsValid}}
-<a href="{{{UserLogoutURL}}}">Logout</a>
+<a href="{{{LogoutURL}}}">Logout</a>
 {{/UserIsValid}}
 {{/WithAuth}}
 </nav>
