Show folgezettel at the bottom of each page with full title
FossilOrigin-Name: f5f2b2104199fcec6e3bfd3cece20f785895ad8fb1d1a7f3df369adc8b2dcb33

--- a/box/constbox/base.css
+++ b/box/constbox/base.css
@@ -256,6 +256,9 @@
   h1+.zs-meta {
     margin-top:-1rem;
   }
+  nav > details {
+    margin-top:1rem;
+  }
   details > summary {
     width: 100%;
     background-color: #eee;
