Unify meta query keys for API and WebUI search
FossilOrigin-Name: e1865e2e11e66f91ce490110b1dc29362c1e3490ae2d689f18a623a557812a76

--- a/box/constbox/base.mustache
+++ b/box/constbox/base.mustache
@@ -51,7 +51,7 @@
 </div>
 {{/HasNewZettelLinks}}
 <form action="{{{SearchURL}}}">
-<input type="text" placeholder="Search.." name="s">
+<input type="text" placeholder="Search.." name="{{QueryKeySearch}}">
 </form>
 </nav>
 <main class="content">
