WebUI info page: show links to parsed zettel
FossilOrigin-Name: c5c2b0f5dd2ea57d7092c1e5ce2a36f2c4a143c1dc92e3267ca7163379b3673e

--- a/box/constbox/info.mustache
+++ b/box/constbox/info.mustache
@@ -31,15 +31,25 @@
 </ul>
 {{/HasExtLinks}}
 {{/HasLinks}}
-<h2>Parts and encodings</h3>
+<h2>Parts and encodings</h2>
 <table>
-{{#Matrix}}
+{{#EvalMatrix}}
 <tr>
 <th>{{Header}}</th>
 {{#Elements}}<td><a href="{{{URL}}}">{{Text}}</td>
 {{/Elements}}
 </tr>
-{{/Matrix}}
+{{/EvalMatrix}}
+</table>
+<h3>Parsed (not evaluated)</h3>
+<table>
+{{#ParseMatrix}}
+<tr>
+<th>{{Header}}</th>
+{{#Elements}}<td><a href="{{{URL}}}">{{Text}}</td>
+{{/Elements}}
+</tr>
+{{/ParseMatrix}}
 </table>
 {{#HasShadowLinks}}
 <h2>Shadowed Boxes</h2>
