Show a warning, if user tries to delete / rename a referenced zettel
FossilOrigin-Name: afdb6cf83ea5c694c0905ada738a304649355d8b4f2c040077e3eaabcac948ce

--- a/box/constbox/base.css
+++ b/box/constbox/base.css
@@ -233,6 +233,10 @@
     font-size: 95%;
   }
   .zs-example { border-style: dotted !important }
+  .zs-warning {
+    background-color: lightyellow;
+    padding: .5rem 1rem;
+  }
   .zs-error {
     background-color: lightpink;
     border-style: none !important;
