--- a/box/constbox/delete.mustache
+++ b/box/constbox/delete.mustache
@@ -3,17 +3,23 @@
 <h1>Delete Zettel {{Zid}}</h1>
 </header>
 <p>Do you really want to delete this zettel?</p>
-{{#HasBackward}}
-<div class=zs-warning>
+{{#HasShadows}}
+<div class="zs-info">
+<h2>Infomation</h2>
+<p>If you delete this zettel, the previoulsy shadowed zettel from overlayed box {{ShadowedBox}} becomes available.</p>
+</div>
+{{/HasShadows}}
+{{#HasIncoming}}
+<div class="zs-warning">
 <h2>Warning!</h2>
-<p>If you delete this zettel, references from the following zettel will become invalid.</p>
+<p>If you delete this zettel, incoming references from the following zettel will become invalid.</p>
 <ul>
-{{#Backward}}
+{{#Incoming}}
 <li><a href="{{{URL}}}">{{Text}}</a></li>
-{{/Backward}}
+{{/Incoming}}
 </ul>
 </div>
-{{/HasBackward}}
+{{/HasIncoming}}
 <dl>
 {{#MetaPairs}}
 <dt>{{Key}}:</dt><dd>{{Value}}</dd>
