--- a/box/constbox/rename.mustache
+++ b/box/constbox/rename.mustache
@@ -3,17 +3,17 @@
 <h1>Rename Zettel {{.Zid}}</h1>
 </header>
 <p>Do you really want to rename this zettel?</p>
-{{#HasBackward}}
-<div class=zs-warning>
+{{#HasIncoming}}
+<div class="zs-warning">
 <h2>Warning!</h2>
-<p>If you rename this zettel, references from the following zettel will become invalid.</p>
+<p>If you rename this zettel, incoming references from the following zettel will become invalid.</p>
 <ul>
-{{#Backward}}
+{{#Incoming}}
 <li><a href="{{{URL}}}">{{Text}}</a></li>
-{{/Backward}}
+{{/Incoming}}
 </ul>
 </div>
-{{/HasBackward}}
+{{/HasIncoming}}
 <form method="POST">
 <div>
 <label for="newid">New zettel id</label>
