--- a/box/constbox/listtags.mustache
+++ b/box/constbox/listtags.mustache
@@ -5,6 +5,6 @@
 <a href="{{{ListTagsURL}}}">All</a>{{#MinCounts}}, <a href="{{{URL}}}">{{Count}}</a>{{/MinCounts}}
 </div>
 </header>
-{{#Tags}} <a href="{{{URL}}}" style="font-size:{{Size}}%">{{Name}}</a><sup>{{Count}}</sup>
+{{#Tags}} <a href="{{{URL}}}" class="zs-font-size-{{Size}}">{{Name}}</a><sup>{{Count}}</sup>
 {{/Tags}}
 </nav>
