--- a/box/constbox/base.css
+++ b/box/constbox/base.css
@@ -254,6 +254,7 @@
   .zs-font-size-3 { font-size:117% }
   .zs-font-size-4 { font-size:150% }
   .zs-font-size-5 { font-size:200% }
+  .zs-deprecated { border-style: dashed; padding: .2rem }
   kbd {
     background: hsl(210, 5%, 100%);
     border: 1px solid hsl(210, 5%, 70%);
