Unlinked references with just search results
FossilOrigin-Name: d24f623faa8c21ba5e1ccd3e30fde374d3d2b356a82501982eab6b5ed1d678ca

--- a/box/constbox/info.mustache
+++ b/box/constbox/info.mustache
@@ -30,6 +30,14 @@
 {{/ExtLinks}}
 </ul>
 {{/HasExtLinks}}
+{{#HasUnLinks}}
+<h3>Unlinked</h3>
+<ul>
+{{#UnLinks}}
+<li><a href="{{{URL}}}">{{{Text}}}</a></li>
+{{/UnLinks}}
+</ul>
+{{/HasUnLinks}}
 {{/HasLinks}}
 <h2>Parts and encodings</h2>
 <table>
