--- a/box/constbox/info.mustache
+++ b/box/constbox/info.mustache
@@ -37,6 +37,12 @@
 <li><a href="{{{URL}}}">{{{Text}}}</a></li>
 {{/UnLinks}}
 </ul>
+{{#UnLinksPhrase}}
+<form>
+<label for="phrase">Phrase</label>
+<input class="zs-input" type="text" id="phrase" name="{{QueryKeyPhrase}}" placeholder="Phrase.." value="{{UnLinksPhrase}}">
+</form>
+{{/UnLinksPhrase}}
 {{/HasUnLinks}}
 {{/HasLinks}}
 <h2>Parts and encodings</h2>
