Rename "Additional links" into "Incoming". Show these links per default
FossilOrigin-Name: a4039bcecf612130a8630a9a17dcdb6c9f81609590e56d9de51e5d3cc0e226d9

--- a/box/constbox/zettel.mustache
+++ b/box/constbox/zettel.mustache
@@ -29,8 +29,8 @@
 {{/HasFolgeLinks}}
 {{#HasBackLinks}}
 <nav>
-<details>
-<summary>Additional links to this zettel</summary>
+<details open>
+<summary>Incoming</summary>
 <ul>
 {{#BackLinks}}
 <li><a href="{{{URL}}}">{{Text}}</a></li>
