--- a/box/constbox/base.mustache
+++ b/box/constbox/base.mustache
@@ -34,6 +34,9 @@
 <a href="{{{ListZettelURL}}}">List Zettel</a>
 <a href="{{{ListRolesURL}}}">List Roles</a>
 <a href="{{{ListTagsURL}}}">List Tags</a>
+{{#CanRefresh}}
+<a href="{{{RefreshURL}}}">Refresh</a>
+{{/CanRefresh}}
 </nav>
 </div>
 {{#HasNewZettelLinks}}
