Add warning for WebUI, when deleting/renaming a zettel with associated useless files.
FossilOrigin-Name: 4ca32620cd2c307cfaab144f6d34ec77f1ec8f8a6ea9ff0b584c11b04e8f6935

--- a/box/constbox/delete.mustache
+++ b/box/constbox/delete.mustache
@@ -20,6 +20,17 @@
 </ul>
 </div>
 {{/HasIncoming}}
+{{#HasUselessFiles}}
+<div class="zs-warning">
+<h2>Warning!</h2>
+<p>Deleting this zettel will also delete the following files, so that they will not be interpreted as content for this zettel.</p>
+<ul>
+{{#UselessFiles}}
+<li>{{{.}}}</li>
+{{/UselessFiles}}
+</ul>
+</div>
+{{/HasUselessFiles}}
 <dl>
 {{#MetaPairs}}
 <dt>{{Key}}:</dt><dd>{{Value}}</dd>
