--- a/box/constbox/rename.mustache
+++ b/box/constbox/rename.mustache
@@ -1,6 +1,6 @@
 <article>
 <header>
-<h1>Rename Zettel {{.Zid}}</h1>
+<h1>Rename Zettel {{Zid}}</h1>
 </header>
 <p>Do you really want to rename this zettel?</p>
 {{#HasIncoming}}
@@ -14,6 +14,17 @@
 </ul>
 </div>
 {{/HasIncoming}}
+{{#HasUselessFiles}}
+<div class="zs-warning">
+<h2>Warning!</h2>
+<p>Renaming this zettel will also delete the following files, so that they will not be interpreted as content for a zettel with identifier {{Zid}}.</p>
+<ul>
+{{#UselessFiles}}
+<li>{{{.}}}</li>
+{{/UselessFiles}}
+</ul>
+</div>
+{{/HasUselessFiles}}
 <form method="POST">
 <div>
 <label for="newid">New zettel id</label>
