Allow to specify role specific CSS data
FossilOrigin-Name: e300ab8d450c98a6bf1b31ed97f6d8b733a5fa41da7cdb75cc8aa9e65d298218

--- a/box/constbox/base.mustache
+++ b/box/constbox/base.mustache
@@ -5,6 +5,7 @@
 {{{MetaHeader}}}
 <link rel="stylesheet" href="{{{CSSBaseURL}}}">
 <link rel="stylesheet" href="{{{CSSUserURL}}}">
+{{#CSSRoleURL}}<link rel="stylesheet" href="{{{CSSRoleURL}}}">{{/CSSRoleURL}}
 <title>{{Title}}</title>
 </head>
 <body>
