Add "save" button to form for creating/editing a zettel.
FossilOrigin-Name: 65cd8c1a7d5ad6fe9afc4bddd712b07ca48dfd503b0f52145acea6e2005a253d

--- a/box/constbox/base.css
+++ b/box/constbox/base.css
@@ -138,10 +138,8 @@
     border-bottom:1px solid #ccc;
     width:100%;
   }
-  .zs-button {
-    float:right;
-    margin: .5em 0 .5em 1em;
-  }
+  input.zs-primary { float:right }
+  input.zs-secondary { float:left }
   a:not([class]) { text-decoration-skip-ink: auto }
   a.broken { text-decoration: line-through }
   img { max-width: 100% }
