--- a/box/constbox/delete.mustache
+++ b/box/constbox/delete.mustache
@@ -37,7 +37,7 @@
 {{/MetaPairs}}
 </dl>
 <form method="POST">
-<input class="zs-button" type="submit" value="Delete">
+<input class="zs-primary" type="submit" value="Delete">
 </form>
 </article>
 {{end}}
