--- a/box/constbox/form.mustache
+++ b/box/constbox/form.mustache
@@ -33,6 +33,9 @@
 <textarea class="zs-input zs-content" id="meta" name="content" rows="20" placeholder="Your content..">{{Content}}</textarea>
 {{/IsTextContent}}
 </div>
-<input class="zs-button" type="submit" value="Submit">
+<div>
+<input class="zs-primary" type="submit" value="Submit">
+<input class="zs-secondary" type="submit" value="Save" formaction="?save">
+</div>
 </form>
 </article>
