--- a/box/constbox/login.mustache
+++ b/box/constbox/login.mustache
@@ -14,6 +14,6 @@
 <label for="password">Password</label>
 <input class="zs-input" type="password" id="password" name="password" placeholder="Your password..">
 </div>
-<input class="zs-button" type="submit" value="Login">
+<div><input class="zs-primary" type="submit" value="Login"></div>
 </form>
 </article>
