--- a/box/constbox/rename.mustache
+++ b/box/constbox/rename.mustache
@@ -31,7 +31,7 @@
 <input class="zs-input" type="text" id="newzid" name="newzid" placeholder="ZID.." value="{{Zid}}" autofocus>
 </div>
 <input type="hidden" id="curzid" name="curzid" value="{{Zid}}">
-<input class="zs-button" type="submit" value="Rename">
+<div><input class="zs-primary" type="submit" value="Rename"></div>
 </form>
 <dl>
 {{#MetaPairs}}
