--- a/box/constbox/form.mustache
+++ b/box/constbox/form.mustache
@@ -4,19 +4,19 @@
 </header>
 <form method="POST">
 <div>
-<label for="title">Title</label>
+<label for="title">Title <a title="Main heading of this zettel. You can use inline zettelmarkup.">&#9432;</a></label>
 <input class="zs-input" type="text" id="title" name="title" placeholder="Title.." value="{{MetaTitle}}" autofocus>
 </div>
 <div>
 <div>
-<label for="role">Role</label>
+<label for="role">Role <a title="One word, without spaces, to set the main role of this zettel.">&#9432;</a></label>
 <input class="zs-input" type="text" id="role" name="role" placeholder="role.." value="{{MetaRole}}">
 </div>
-<label for="tags">Tags</label>
+<label for="tags">Tags <a title="Tags must begin with an '#' sign. They are separated by spaces.">&#9432;</a></label>
 <input class="zs-input" type="text" id="tags" name="tags" placeholder="#tag" value="{{MetaTags}}">
 </div>
 <div>
-<label for="meta">Metadata</label>
+<label for="meta">Metadata <a title="Other metadata for this zettel. Each line contains a key/value pair, separated by a colon ':'.">&#9432;</a></label>
 <textarea class="zs-input" id="meta" name="meta" rows="4" placeholder="metakey: metavalue">
 {{#MetaPairsRest}}
 {{Key}}: {{Value}}
@@ -24,12 +24,12 @@
 </textarea>
 </div>
 <div>
-<label for="syntax">Syntax</label>
+<label for="syntax">Syntax <a title="Syntax of zettel content below, one word. Typically 'zmk' (for zettelmarkup).">&#9432;</a></label>
 <input class="zs-input" type="text" id="syntax" name="syntax" placeholder="syntax.." value="{{MetaSyntax}}">
 </div>
 <div>
 {{#IsTextContent}}
-<label for="content">Content</label>
+<label for="content">Content <a title="Content for this zettel, according to above syntax.">&#9432;</a></label>
 <textarea class="zs-input zs-content" id="meta" name="content" rows="20" placeholder="Your content..">{{Content}}</textarea>
 {{/IsTextContent}}
 </div>
