--- a/box/constbox/login.mustache
+++ b/box/constbox/login.mustache
@@ -7,11 +7,11 @@
 {{/Retry}}
 <form method="POST" action="">
 <div>
-<label for="username">User name</label>
+<label for="username">User name:</label>
 <input class="zs-input" type="text" id="username" name="username" placeholder="Your user name.." autofocus>
 </div>
 <div>
-<label for="password">Password</label>
+<label for="password">Password:</label>
 <input class="zs-input" type="password" id="password" name="password" placeholder="Your password..">
 </div>
 <div><input class="zs-primary" type="submit" value="Login"></div>
