Align HTML encoder with cHTML encoder
FossilOrigin-Name: 789829bceadaf6b8edb61ff8894104e7bbc3efc24835b76ba44fcd6370dbd4c6

--- a/box/constbox/base.css
+++ b/box/constbox/base.css
@@ -143,7 +143,7 @@
   a.broken { text-decoration: line-through }
   img { max-width: 100% }
   img.right { float: right }
-  ol.endnotes {
+  ol.zs-endnotes {
     padding-top: .5rem;
     border-top: 1px solid;
   }
