Allow to update search expression then viewing list on WebUI
FossilOrigin-Name: 3a13af8829c950a32a3089b153a56b81193fa6cbb60b3933caa7e20217523efa

--- a/box/constbox/listzettel.mustache
+++ b/box/constbox/listzettel.mustache
@@ -1,6 +1,9 @@
 <header>
 <h1>{{Title}}</h1>
 </header>
+<form action="{{{SearchURL}}}">
+<input class="zs-input" type="text" placeholder="Search.." name="{{QueryKeySearch}}" value="{{SearchValue}}">
+</form>
 <ul>
 {{#Metas}}<li><a href="{{{URL}}}">{{{Text}}}</a></li>
 {{/Metas}}</ul>
