Show search on info page separately
FossilOrigin-Name: 81e3628d18aa4a32fcc15a633403bc4b7ba370faae5a8470c38549d02de35d47

--- a/box/constbox/info.mustache
+++ b/box/constbox/info.mustache
@@ -21,6 +21,14 @@
 {{/LocLinks}}
 </ul>
 {{/HasLocLinks}}
+{{#HasSearchLinks}}
+<h3>Searches</h3>
+<ul>
+{{#SearchLinks}}
+<li><a href="{{{URL}}}">{{Text}}</a></li>
+{{/SearchLinks}}
+</ul>
+{{/HasSearchLinks}}
 {{#HasExtLinks}}
 <h3>External</h3>
 <ul>
