--- a/box/constbox/base.css
+++ b/box/constbox/base.css
@@ -103,13 +103,13 @@
     border-spacing: 0;
     max-width: 100%;
   }
-  th,td {
+  thead>tr>td { border-bottom: 2px solid hsl(0, 0%, 70%); font-weight: bold }
+  tfoot>tr>td { border-top: 2px solid hsl(0, 0%, 70%); font-weight: bold }
+  td {
     text-align: left;
     padding: .25rem .5rem;
+    border-bottom: 1px solid hsl(0, 0%, 85%)
   }
-  td { border-bottom: 1px solid hsl(0, 0%, 85%) }
-  thead th { border-bottom: 2px solid hsl(0, 0%, 70%) }
-  tfoot th { border-top: 2px solid hsl(0, 0%, 70%) }
   main form {
     padding: 0 .5em;
     margin: .5em 0 0 0;
@@ -199,9 +199,9 @@
     border-style: none !important;
     font-weight: bold;
   }
-  td.left,th.left { text-align:left }
-  td.center,th.center { text-align:center }
-  td.right,th.right { text-align:right }
+  td.left { text-align:left }
+  td.center { text-align:center }
+  td.right { text-align:right }
   .zs-font-size-0 { font-size:75% }
   .zs-font-size-1 { font-size:83% }
   .zs-font-size-2 { font-size:100% }
