Refactor WebUI zettel list creation to use evaluator.CreateBlockNodeMeta
FossilOrigin-Name: 4680a5389ab63f32df87d6adac972a82d75e83c66c8b378f6d0fd12c89320343

--- a/box/constbox/context.mustache
+++ b/box/constbox/context.mustache
@@ -1,4 +1,3 @@
-<nav>
 <header>
 <h1>{{Title}}</h1>
 <div class="zs-meta">
@@ -9,8 +8,4 @@
 &#183; Depth:{{#Depths}}&#x2000;<a href="{{{URL}}}">{{{Text}}}</a>{{/Depths}}
 </div>
 </header>
-<p><a href="{{{Start.URL}}}">{{{Start.Text}}}</a></p>
-<ul>
-{{#Metas}}<li><a href="{{{URL}}}">{{{Text}}}</a></li>
-{{/Metas}}</ul>
-</nav>
+{{{Content}}}
