--- a/box/constbox/listzettel.mustache
+++ b/box/constbox/listzettel.mustache
@@ -4,6 +4,4 @@
 <form action="{{{SearchURL}}}">
 <input class="zs-input" type="text" placeholder="Search.." name="{{QueryKeySearch}}" value="{{SearchValue}}">
 </form>
-<ul>
-{{#Metas}}<li><a href="{{{URL}}}">{{{Text}}}</a></li>
-{{/Metas}}</ul>
+{{{Content}}}
