Rename search -> query
FossilOrigin-Name: 247d01020b2d5cbf4c7764d7a67871b96d5945cccf4479b881f27cb100c95f78

--- a/box/constbox/base.mustache
+++ b/box/constbox/base.mustache
@@ -54,7 +54,7 @@
 </div>
 {{/HasNewZettelLinks}}
 <form action="{{{SearchURL}}}">
-<input type="text" placeholder="Search.." name="{{QueryKeySearch}}">
+<input type="text" placeholder="Search.." name="{{QueryKeyQuery}}">
 </form>
 </nav>
 <main class="content">
