--- a/box/constbox/info.mustache
+++ b/box/constbox/info.mustache
@@ -21,14 +21,14 @@
 {{/LocLinks}}
 </ul>
 {{/HasLocLinks}}
-{{#HasSearchLinks}}
-<h3>Searches</h3>
+{{#HasQueryLinks}}
+<h3>Queries</h3>
 <ul>
-{{#SearchLinks}}
+{{#QueryLinks}}
 <li><a href="{{{URL}}}">{{Text}}</a></li>
-{{/SearchLinks}}
+{{/QueryLinks}}
 </ul>
-{{/HasSearchLinks}}
+{{/HasQueryLinks}}
 {{#HasExtLinks}}
 <h3>External</h3>
 <ul>
