--- a/box/constbox/listzettel.mustache
+++ b/box/constbox/listzettel.mustache
@@ -2,6 +2,6 @@
 <h1>{{Title}}</h1>
 </header>
 <form action="{{{SearchURL}}}">
-<input class="zs-input" type="text" placeholder="Search.." name="{{QueryKeySearch}}" value="{{SearchValue}}">
+<input class="zs-input" type="text" placeholder="Search.." name="{{QueryKeyQuery}}" value="{{QueryValue}}">
 </form>
 {{{Content}}}
