Add support for metadata author; which is shown in the WebUI
FossilOrigin-Name: 9bacfab69e9ed750ca2fee18b63d8094242181af42741af5d25c2e3f37946cfe

--- a/box/constbox/zettel.mustache
+++ b/box/constbox/zettel.mustache
@@ -11,6 +11,7 @@
 {{#CanFolge}}&#183; <a href="{{{FolgeURL}}}">Folge</a>{{/CanFolge}}
 {{#PrecursorRefs}}<br>Precursor: {{{PrecursorRefs}}}{{/PrecursorRefs}}
 {{#HasExtURL}}<br>URL: <a href="{{{ExtURL}}}"{{{ExtNewWindow}}}>{{ExtURL}}</a>{{/HasExtURL}}
+{{#Author}}<br>By {{Author}}{{/Author}}
 </div>
 </header>
 {{{Content}}}
