WebUI: refactor handling of []simpleLink -> simpleLinks
FossilOrigin-Name: 4a72bafba5ba141d7ea7e9040b1c3e32b8fd27c4d8a897cc9761c70c9a81846e

--- a/box/constbox/base.mustache
+++ b/box/constbox/base.mustache
@@ -43,16 +43,16 @@
 {{/CanRefresh}}
 </nav>
 </div>
-{{#HasNewZettelLinks}}
+{{#NewZettelLinks.Has}}
 <div class="zs-dropdown">
 <button>New</button>
 <nav class="zs-dropdown-content">
-{{#NewZettelLinks}}
+{{#NewZettelLinks.Links}}
 <a href="{{{URL}}}">{{Text}}</a>
-{{/NewZettelLinks}}
+{{/NewZettelLinks.Links}}
 </nav>
 </div>
-{{/HasNewZettelLinks}}
+{{/NewZettelLinks.Has}}
 <form action="{{{SearchURL}}}">
 <input type="text" placeholder="Search.." name="{{QueryKeyQuery}}">
 </form>
