--- a/box/constbox/delete.mustache
+++ b/box/constbox/delete.mustache
@@ -9,17 +9,17 @@
 <p>If you delete this zettel, the previoulsy shadowed zettel from overlayed box {{ShadowedBox}} becomes available.</p>
 </div>
 {{/HasShadows}}
-{{#HasIncoming}}
+{{#Incoming.Has}}
 <div class="zs-warning">
 <h2>Warning!</h2>
 <p>If you delete this zettel, incoming references from the following zettel will become invalid.</p>
 <ul>
-{{#Incoming}}
+{{#Incoming.Links}}
 <li><a href="{{{URL}}}">{{Text}}</a></li>
-{{/Incoming}}
+{{/Incoming.Links}}
 </ul>
 </div>
-{{/HasIncoming}}
+{{/Incoming.Has}}
 {{#HasUselessFiles}}
 <div class="zs-warning">
 <h2>Warning!</h2>
