WebUI: add "version" action
FossilOrigin-Name: 830da04dc534ce9b5c4b163bf3759829de9a8b15ad483de7dabc3bc85af9d9ed

--- a/box/constbox/info.mustache
+++ b/box/constbox/info.mustache
@@ -4,8 +4,9 @@
 <a href="{{{WebURL}}}">Web</a>
 &#183; <a href="{{{ContextURL}}}">Context</a>
 {{#CanWrite}} &#183; <a href="{{{EditURL}}}">Edit</a>{{/CanWrite}}
-{{#CanFolge}} &#183; <a href="{{{FolgeURL}}}">Folge</a>{{/CanFolge}}
 {{#CanCopy}} &#183; <a href="{{{CopyURL}}}">Copy</a>{{/CanCopy}}
+{{#CanVersion}} &#183; <a href="{{{VersionURL}}}">Version</a>{{/CanVersion}}
+{{#CanFolge}} &#183; <a href="{{{FolgeURL}}}">Folge</a>{{/CanFolge}}
 {{#CanRename}}&#183; <a href="{{{RenameURL}}}">Rename</a>{{/CanRename}}
 {{#CanDelete}}&#183; <a href="{{{DeleteURL}}}">Delete</a>{{/CanDelete}}
 </header>
