Add file upload widget to form for further processing in the WebUI
FossilOrigin-Name: 6b16b383977d975b99b451aadc373521809e88760b34ff4512f4815ca7baa0a5

--- a/box/constbox/base.css
+++ b/box/constbox/base.css
@@ -138,6 +138,10 @@
   }
   input.zs-primary { float:right }
   input.zs-secondary { float:left }
+  input.zs-upload {
+    padding-left: 1em;
+    padding-right: 1em;
+  }
   a:not([class]) { text-decoration-skip-ink: auto }
   a.broken { text-decoration: line-through }
   img { max-width: 100% }
