--- a/box/constbox/form.mustache
+++ b/box/constbox/form.mustache
@@ -49,6 +49,7 @@
 <div>
 <input class="zs-primary" type="submit" value="Submit">
 <input class="zs-secondary" type="submit" value="Save" formaction="?save">
+<input class="zs-upload" type="file" id="zs-file" name="file">
 </div>
 </form>
 </article>
