--- a/box/constbox/base.mustache
+++ b/box/constbox/base.mustache
@@ -60,7 +60,7 @@
 <main class="content">
 {{{Content}}}
 </main>
-{{#FooterHTML}}<footer>{{{FooterHTML}}}</footer>{{/FooterHTML}}
+{{#FooterHTML}}<footer><hr>{{{FooterHTML}}}</footer>{{/FooterHTML}}
 {{#DebugMode}}<div><b>WARNING: Debug mode is enabled. DO NOT USE IN PRODUCTION!</b></div>{{/DebugMode}}
 </body>
 </html>
