Enhance zettel context
FossilOrigin-Name: 0ced212fc5ec5ecdc67a459a0c5a343060552852b0fc95f9f17dbf689627c78a

--- a/box/constbox/context.mustache
+++ b/box/constbox/context.mustache
@@ -5,7 +5,7 @@
 &#183; <a href="?dir=backward">Backward</a>
 &#183; <a href="?dir=both">Both</a>
 &#183; <a href="?dir=forward">Forward</a>
-&#183; Depth:{{#Depths}}&#x2000;<a href="{{{URL}}}">{{{Text}}}</a>{{/Depths}}
+&#183; Cost:{{#Costs}}&#x2000;<a href="{{{URL}}}">{{{Text}}}</a>{{/Costs}}
 </div>
 </header>
 {{{Content}}}
